application.properties pending for jpa,mysql db config

--- a/product-inventory-service/src/main/resources/application.properties
+++ b/product-inventory-service/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=priduct-inventory-service
+spring.application.name=product-operation-service
+
+server.port = 8080
+
+#to configure all the database & spring_data_jpa properties...pending
