--- a/product-inventory-service/src/main/resources/application.properties
+++ b/product-inventory-service/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.application.name=product-operation-service
 server.port = 8080
 
 #to configure all the database & spring_data_jpa properties...pending
+
+spring.datasource.url=jdbc:mysql://localhost:3306/product?useSSL=false
+spring.datasource.username=root
+spring.datasource
